apps/core/loki/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-traefik
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.tuntelder.com`)
      kind: Rule
      services:
        - name: loki-grafana
          port: 80
      middlewares:
        - name: crowdsec-mw
          namespace: edge
        - name: authentik
          namespace: edge

  tls:
    certResolver: letsencrypt
